--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "dependencies": {
     "antd": "^3.2.2",
     "google-recaptcha-v2": "^1.0.4",
-    "react-back-to-top-button": "^0.0.14",
     "react": "^16.5.2",
+    "react-back-to-top-button": "^0.0.14",
     "react-dom": "^16.5.2",
     "react-google-recaptcha": "^2.1.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "1.1.5",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
